# Reserving-using-Agentic-AI

./: ARCHITECTURE_WALKTHROUGH.md  Antigravity_Implementation_Spec.md  Complete_Remediation_Roadmap.md  README.md  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  vercel.json
app/api/: routes.py
app/backend/: main.py
backend/: agent_workflow.py  agents.py  debug_cl.py  debug_comauto.py  main.py  test_benchmark_dev_engine.py  test_bf.py  test_capabilities.py  test_clark.py  test_diagnostics.py  test_integration_step1.py  test_multi_agent.py  test_negative_ibnr_validation.py  test_remediation.py  test_tools.py  test_triangle.py
backend/agents/: __init__.py  comparison_agent.py  diagnostics_agent.py  parser.py  planner.py  prompt_builders.py  recommendation_agent.py  registry.py  reporting_agent.py  reserving_agent.py  stage_manager.py  supervisor.py  utils.py
backend/app/: main.py
backend/models/: inspector.py  methods.py  on_level.py  standardizer.py  tools.py  triangle.py
backend/src/: recommendation.py
dashboard/: index.html  style.css  test_models.js
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE.md  DIAGNOSTICS.md  FRONTEND_REFACTOR_PLAN.md  TESTING.md  TEST_REORGANIZATION_REPORT.md
frontend/: package-lock.json  package.json
notebooks/: AI_Reserving.ipynb  Chain_Ladder_ELR_Bornhuetter_Ferguson.ipynb  Frequency_Severity.ipynb  MACK_Chain_Ladder.ipynb  chainladder.ipynb
references/: Executive_Summary_Audit_Integration.md  Paid_vs_Incurred_Architecture_Analysis.md  Quick_Fix_Guide.md  Reserving_Methods_Documentation.md
(+156 files in other folders)
